# CoMuRoS

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/skills/analyzing-projects/: SKILL.md
CoMuRoS/chatty/: setup.py
CoMuRoS/chatty/chatty/: chat_gui.py  chat_manager.py  listen.py  microphone.py  speak.py  task_manager.py  time.py
CoMuRoS/chatty/data/: chat_history.txt  chat_history_current.txt
CoMuRoS/chatty/launch/: chat_system.launch.py
CoMuRoS/cleaning_bot/: setup.py
CoMuRoS/cleaning_bot/cleaning_bot/: cleaning_bot_llm.py  holonomic_position_controller_service.py  spawn_waste.py  tools.py
CoMuRoS/cleaning_bot/data/: cleaning_bot_chat_history.txt  cleaning_bot_task_history.txt
CoMuRoS/delivery_bot/: setup.py
CoMuRoS/delivery_bot/delivery_bot/: delivery_bot_llm.py  tools.py
CoMuRoS/docs/: ROS2基础知识大全.html  multi_robot_launch详解.html  robots_模块详解.html  学习总结.md  指南.md
CoMuRoS/drone/: setup.py
CoMuRoS/drone/data/: drone_task_history.txt
CoMuRoS/drone/drone/: drone_llm.py  drone_position_controller_client.py  drone_position_controller_service-1.py  drone_position_controller_service-2.py  drone_position_controller_service.py  tools.py
CoMuRoS/robot_llm/: setup.py
CoMuRoS/robot_llm/launch/: robot_llms.launch.py  robot_services.launch.py
CoMuRoS/robot_llm/robot_llm/: a2a_worker_node.py  robot_llm.py  tools.py
CoMuRoS/robots/multi_robot/launch/: multi_robot.launch.py
CoMuRoS/robots/x3_uav/x3_uav_llm/: setup.py
CoMuRoS/robots/yahboom/yahboom_rosmaster_description/: CMakeLists.txt  package.xml
CoMuRoS/robots/yahboom/yahboom_rosmaster_description/launch/: display.launch.py  robot_state_publisher.launch.py
docs/: cleaning_bot_llm详解.html  drone_controller详解.html  holonomic_controller详解.html  index.html  task_manager详解.html  学习总结.md
docs/superpowers/plans/: 2026-05-28-a2a-agent-integration-plan.md  2026-05-29-uv-monorepo-phase1.md
docs/superpowers/specs/: 2026-05-28-a2a-agent-integration-design.html  2026-05-28-a2a-agent-integration-design.md  框架.md  框架优化方案-uv-monorepo.md
(+16 files in other folders)
